Update to work with multiple indexes - Create index option - Upsert rather than create documents - Use SINGULAR or MULTIPLE indexes - Add interval to throttle ES requets - Initial integration tests