@@ -4,9 +4,12 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Iterators;
 import lombok.extern.slf4j.Slf4j;
 import org.elasticsearch.action.bulk.BulkRequest;
-import org.elasticsearch.action.index.IndexRequest;
+import org.elasticsearch.action.update.UpdateRequest;
 import org.elasticsearch.client.RequestOptions;
 import org.elasticsearch.client.RestHighLevelClient;
+import org.elasticsearch.client.indices.CreateIndexRequest;
+import org.elasticsearch.client.indices.GetIndexRequest;
+import org.elasticsearch.client.indices.GetIndexResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,16 +22,30 @@ import uk.gov.digital.ho.hocs.hocscaseworksearchindexer.casework.model.CaseData;
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
 import java.io.IOException;
-import java.util.*;
+import java.text.DateFormat;
+import java.text.SimpleDateFormat;
+import java.time.Instant;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Slf4j
 @Service
 public class ETLService {
 
-    private int batchSize;
+    private IndexMode indexMode;
+
+    private final String prefix;
+
+    private final int batchSize;
+
+    private final boolean newIndex;
+
+    private final int batchInterval;
 
     private final CaseRepository caseRepository;
 
@@ -36,25 +53,41 @@ public class ETLService {
 
     private ObjectMapper objectMapper;
 
-    private final String index;
+    private final String liveIndex;
+
+    private DateFormat dateFormat = new SimpleDateFormat("yyyyMMddhhmmss");
 
     @PersistenceContext
     protected EntityManager entityManager;
 
-    public ETLService(@Value("${batch-size}") int batchSize,
-                      CaseRepository caseRepository,
+    private final String timestamp;
+
+    public ETLService(@Value("${batch.size}") int batchSize,
                       RestHighLevelClient client,
                       ObjectMapper objectMapper,
-                      @Value("${aws.es.index-prefix}") String prefix) {
+                      @Value("${aws.es.index-prefix}") String prefix,
+                      @Value("${mode}") IndexMode indexMode,
+                      @Value("${new-index}") boolean newIndex,
+                      CaseRepository caseRepository,
+                      @Value("${batch.interval}") int batchInterval) {
         this.batchSize = batchSize;
+        this.newIndex = newIndex;
         this.caseRepository = caseRepository;
         this.client = client;
+        this.prefix = prefix;
         this.objectMapper = objectMapper;
-        this.index = String.format("%s-%s", prefix, "case");
+        this.liveIndex = String.format("%s-%s", prefix, "case");
+        this.indexMode = indexMode;
+        this.batchInterval = batchInterval;
+        this.timestamp = dateFormat.format(Date.from(Instant.now()));
     }
 
     @Transactional(readOnly = true)
-    public void migrate() {
+    public void migrate() throws IOException {
+
+        if (newIndex) {
+            createNewIndexes();
+        }
 
         AtomicInteger count = new AtomicInteger(0);
         try (Stream<CaseData> cases = caseRepository.getAllCasesAndCollections()) {
@@ -64,16 +97,55 @@ public class ETLService {
                     count.incrementAndGet();
                     log.info("Indexing case {} for UUID {}", count, caseData.getUuid());
                     entityManager.detach(caseData);
-                    bulkRequest.add(
-                        new IndexRequest(index).id(caseData.getUuid().toString()).source(mapCaseData(caseData)));
+
+                    bulkRequest.add(new UpdateRequest(getMigrationIndex(caseData.getType()), caseData.getUuid().toString())
+                        .docAsUpsert(true)
+                        .doc(mapCaseData(caseData)));
                 });
 
                 try {
                     client.bulk(bulkRequest, RequestOptions.DEFAULT);
-                } catch (IOException e) {
+                    Thread.sleep(batchInterval);
+                } catch (IOException | InterruptedException e) {
                     log.error("Error indexing batch", e);
                 }
             });
+        }
+    }
+
+    private String getMigrationIndex(String type) {
+        if (indexMode == IndexMode.SINGULAR) {
+            if (newIndex) {
+                return String.format("%s-%s-%s", prefix, "case", timestamp);
+            } else {
+                return liveIndex;
+            }
+        } else {
+            if(newIndex) {
+                return String.format("%s-%s-%s", prefix, type.toLowerCase(), timestamp);
+            } else {
+                return String.format("%s-%s", prefix, type.toLowerCase());
+            }
+        }
+    }
+
+    private void createNewIndexes() throws IOException {
+        GetIndexResponse getIndexResponse = client.indices().get(new GetIndexRequest(liveIndex),
+            RequestOptions.DEFAULT);
+        if (indexMode == IndexMode.SINGULAR) {
+            var index = getMigrationIndex(null);
+            log.info("Creating new index {} for migration", index);
+            client.indices().create(
+                new CreateIndexRequest(index).mapping(getIndexResponse.getMappings().get(liveIndex).sourceAsMap()),
+                RequestOptions.DEFAULT);
+        } else {
+            for (CaseType caseType : CaseType.values()) {
+                var index = getMigrationIndex(caseType.name());
+                log.info("Creating new index {} for migration", index);
+                client.indices().create(
+                    new CreateIndexRequest(index).source(getIndexResponse.getMappings().get(liveIndex).sourceAsMap()),
+                    RequestOptions.DEFAULT);
+            }
         }
     }
 
@@ -114,7 +186,6 @@ public class ETLService {
         return objectMapper.convertValue(indexMap, Map.class);
     }
 
-
     private List<Map<String, Object>> mapCorrespondents(Set<Correspondent> correspondents) {
         return correspondents.stream().map(correspondent -> {
             Map<String, Object> indexMap = new HashMap<>();
@@ -132,26 +203,26 @@ public class ETLService {
             indexMap.put("uuid", correspondent.getUuid());
             indexMap.put("type", correspondent.getCorrespondentType());
             return indexMap;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    private List<Map<String,Object>> mapSomuItems(Set<SomuItem> somuItems) {
+    private List<Map<String, Object>> mapSomuItems(Set<SomuItem> somuItems) {
         return somuItems.stream().map(somuItem -> {
             Map<String, Object> indexMap = new HashMap<>();
             indexMap.put("uuid", somuItem.getUuid());
             indexMap.put("somuTypeUuid", somuItem.getSomuUuid());
             indexMap.put("data", somuItem.getData());
             return indexMap;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    private List<Map<String,Object>> mapTopics(Set<Topic> topics) {
+    private List<Map<String, Object>> mapTopics(Set<Topic> topics) {
         return topics.stream().map(topic -> {
             Map<String, Object> indexMap = new HashMap<>();
             indexMap.put("uuid", topic.getTextUUID());
             indexMap.put("text", topic.getText());
             return indexMap;
-        }).collect(Collectors.toList());
+        }).toList();
 
     }
 }
